# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed  nodeids
gendiff/: __init__.py  comparator.py  diff.py  parser.py  parsing.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
own_lib/: __init__.py  generate_diff.py
tests/: test_gendiff.py
tests/fixtures/: flat2.json  result_json.txt  result_plain.txt
